--- a/MedPortal/appsettings.json
+++ b/MedPortal/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=kapitann3mo.ru;Port=5432;Database=MedService;Username=medecine_service;Password=UGFyiCefYfP4U32U"
+  }
 }
